# 01_board_tracker

./: .gitignore  Concept.txt  README.md  config.py  corp_list.py  main.py  main_local_llm.py  pyproject.toml  report_save.py  requirements.txt  service_flow.md
.claude/: settings.json  settings.local.json
src/: collector.py  db.py  parser.py  parser_local_llm.py  schema.py
